--- a/app/src/main/res/layout/contact_list_item.xml
+++ b/app/src/main/res/layout/contact_list_item.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical" >
 
-    <com.android.decipherstranger.view.HandyTextView
+    <TextView
         android:id="@+id/catalog"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -15,30 +15,38 @@
         android:paddingTop="5dip"
         android:paddingBottom="5dip"
         android:text="A"/>
+    
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-         <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="5dip"
-            android:id="@+id/contact_user_photo"/>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:orientation="vertical">
-            <com.android.decipherstranger.view.HandyTextView
-                android:id="@+id/contact_user_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dip"
-                android:layout_marginLeft="20dip"
-                android:textSize="20dip"
-                android:textColor="#336598"
-                android:text="我是你叔叔"/>
-        </LinearLayout>
-    </LinearLayout>
 
+        <RelativeLayout
+            android:layout_margin="5dp"
+            android:layout_width="fill_parent"
+            android:layout_height="50dp">
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="5dp"
+                android:id="@+id/contact_user_photo"
+                android:layout_centerVertical="true"
+                android:layout_alignParentLeft="true"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="New Text"
+                    android:textSize="22dp"
+                    android:id="@+id/contact_user_name"
+                    android:textColor="#336598"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="10dp"
+                    android:layout_toRightOf="@+id/contact_user_photo" />
+
+            </RelativeLayout>
+        
+    </LinearLayout>
 
 </LinearLayout>
