--- a/app/src/main/res/layout/chatting_item_msg_text_left.xml
+++ b/app/src/main/res/layout/chatting_item_msg_text_left.xml
@@ -49,6 +49,19 @@
             </View>
         </FrameLayout>
         <TextView
+            android:id="@+id/tv_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:layout_toRightOf="@id/recorder_length"
+            android:clickable="true"
+            android:focusable="true"
+            android:gravity="left|center"
+            android:lineSpacingExtra="2dp"
+            android:minHeight="50dp"
+            android:textColor="#ff000000"
+            android:textSize="15sp" />
+        <TextView
             android:id="@+id/tv_chatcontent"
             style="@style/chat_content_date_style"
             android:layout_width="wrap_content"
@@ -64,19 +77,6 @@
             android:layout_toRightOf="@+id/iv_userhead"
             android:layout_marginLeft="10dp"
             android:visibility="gone"/>
-        <TextView
-            android:id="@+id/tv_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:layout_toRightOf="@id/tv_chatcontent"
-            android:clickable="true"
-            android:focusable="true"
-            android:gravity="left|center"
-            android:lineSpacingExtra="2dp"
-            android:minHeight="50dp"
-            android:textColor="#ff000000"
-            android:textSize="15sp" />
     </RelativeLayout>
 
 </LinearLayout>
