--- a/app/src/main/res/layout/contact_list_item.xml
+++ b/app/src/main/res/layout/contact_list_item.xml
@@ -24,7 +24,7 @@
         <RelativeLayout
             android:layout_margin="2dp"
             android:layout_width="fill_parent"
-            android:layout_height="50dp">
+            android:layout_height="wrap_content">
 
             <ImageView
                 android:layout_width="36dp"
