--- a/app/src/main/res/layout/show_map.xml
+++ b/app/src/main/res/layout/show_map.xml
@@ -84,7 +84,7 @@
                         android:textColor="@color/font_value"
                         android:layout_weight="0.20" />
 
-                    <TextView
+                    <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
