--- a/app/src/main/res/layout/activity_game_fail.xml
+++ b/app/src/main/res/layout/activity_game_fail.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -8,5 +8,16 @@
         android:layout_height="wrap_content"
         android:id="@+id/imageView"
         android:src="@drawable/friend_get_fail"
-        android:layout_gravity="center_horizontal" />
-</LinearLayout>
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Button"
+        android:id="@+id/close"
+        android:onClick="GameFailOnClick"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
+</RelativeLayout>
