--- a/app/src/main/res/layout/game_help_popup.xml
+++ b/app/src/main/res/layout/game_help_popup.xml
@@ -1,15 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/translucent_grey">
     
-    <LinearLayout
-        android:id="@+id/gameHelp"
+<!--    <LinearLayout
+        android:id="@+id/gameRule"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:clickable="true"
         android:onClick="GameWelcomeOnClick"
-        android:background="@drawable/game_help"
-        android:orientation="vertical"/>
-    
-</LinearLayout>
+        android:background="@drawable/game_rule"
+        android:orientation="vertical"/>-->
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:id="@+id/gameRule"
+            android:src="@drawable/game_rule"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true" />
+
+        <ImageButton
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:id="@+id/closeRule"
+            android:background="@color/red"
+            android:onClick="GameWelcomeOnClick"
+            android:layout_alignTop="@+id/gameRule"
+            android:layout_alignRight="@+id/gameRule"
+            android:layout_alignEnd="@+id/gameRule" />
+
+    </RelativeLayout>
+
+</RelativeLayout>
