--- a/app/src/main/res/layout/activity_game_main.xml
+++ b/app/src/main/res/layout/activity_game_main.xml
@@ -166,14 +166,16 @@
                         android:layout_centerHorizontal="true" />
 
                     <ImageButton
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="5dp"
                         android:id="@+id/closeRule"
-                        android:background="@color/red"
+                        android:background="@drawable/close_button"
                         android:onClick="backToGame"
-                        android:layout_alignTop="@+id/gameRule"
-                        android:layout_alignRight="@+id/gameRule"
-                        android:layout_alignEnd="@+id/gameRule" />
+                        android:layout_marginTop="43dp"
+                        android:layout_alignParentTop="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignParentEnd="true" />
 
                 </RelativeLayout>
                 
