--- a/app/src/main/res/layout/activity_game_fail.xml
+++ b/app/src/main/res/layout/activity_game_fail.xml
@@ -15,34 +15,44 @@
             android:id="@+id/imageView"
             android:src="@drawable/friend_get_fail"
             android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true" />
-
-<!--        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"/>
 
         <LinearLayout
             android:orientation="vertical"
+            android:layout_weight="1"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true"/>-->
+            android:layout_alignTop="@+id/imageView"
+            android:layout_alignBottom="@+id/imageView"
+            android:layout_alignLeft="@+id/imageView"
+            android:layout_alignStart="@+id/imageView">
 
-        <!--        <Button
+            <LinearLayout
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"/>
+
+            <RelativeLayout
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent">
+
+                <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/close"
                     android:background="@drawable/fail_confirm_btn"
                     android:onClick="GameFailOnClick"
-                    android:layout_alignParentBottom="true"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginBottom="150dp" />-->
+                    android:layout_centerVertical="true"
+                    android:layout_centerHorizontal="true" />
+
+            </RelativeLayout>
+
+        </LinearLayout>
 
     </RelativeLayout>
 
 </RelativeLayout>
+
