--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,56 +3,41 @@
     android:id="@+id/login_page"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@drawable/shape_login_bg"
+    android:background="@drawable/login_bg"
     android:orientation="vertical" >
 
     <ImageView
         android:id="@+id/login_image"
-        android:layout_width="76dp"
-        android:layout_height="76dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
-        android:background="@drawable/mypic"
+        android:background="@drawable/logo"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
-    <LinearLayout
-        android:id="@+id/login_input_layout"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/login_image"
-        android:layout_marginTop="8dp"
-        android:layout_marginLeft="28dp"
-        android:layout_marginRight="28dp"
-        android:background="@drawable/shape_input_bg"
-        android:orientation="vertical" >
-
         <AutoCompleteTextView
             android:id="@+id/login_edit_account"
-            android:layout_width="fill_parent"
-            android:layout_height="44dp"
-            android:background="@null"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/login_image"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="35dp"
+            android:background="@drawable/login_input_bg"
             android:imeOptions="actionNext"
             android:singleLine="true"
             android:hint="@string/account"
             android:maxLength="20"
             android:maxLines="1"
-            android:paddingLeft="12dp"
+            android:paddingLeft="20dp"
             android:textColor="@color/black"
-            android:textColorHint="@color/grey"
-            android:textSize="16dp" />
-
-        <View
-            android:layout_width="fill_parent"
-            android:layout_height="1dp"
-            android:layout_marginLeft="1dp"
-            android:layout_marginRight="1dp"
-            android:background="@color/white_grey" />
+            android:textColorHint="@color/login_text_hint"
+            android:textSize="20dp" />
 
         <EditText
             android:id="@+id/login_edit_password"
-            android:layout_width="fill_parent"
-            android:layout_height="44dp"
-            android:background="@null"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/login_input_bg"
             android:imeOptions="actionDone"
             android:singleLine="true"
             android:gravity="center_vertical"
@@ -60,36 +45,39 @@
             android:inputType="textPassword"
             android:maxLength="20"
             android:maxLines="1"
-            android:paddingLeft="12dp"
+            android:paddingLeft="20dp"
             android:textColor="@color/black"
-            android:textColorHint="@color/grey"
-            android:textSize="16dp" />
-    </LinearLayout>
+            android:textColorHint="@color/login_text_hint"
+            android:textSize="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_below="@+id/login_edit_account"
+            android:layout_centerHorizontal="true" />
+
 
     <Button
         android:id="@+id/login_button"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/login_input_layout"
-        android:layout_marginLeft="28dp"
-        android:layout_marginRight="28dp"
-        android:layout_marginTop="12dp"
-        android:background="@drawable/selector_login_button_bg"
+        android:layout_marginTop="25dp"
+        android:background="@drawable/login_button_bg"
         android:gravity="center"
-        android:paddingTop="5dp"
         android:text="@string/login"
-        android:textColor="@color/black_grey"
-        android:textSize="18dp" />
+        android:textColor="@color/login_btn_text"
+        android:textSize="20dp"
+        android:layout_below="@+id/login_edit_password"
+        android:layout_centerHorizontal="true" />
 
     <RelativeLayout
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/login_button"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="10dp"
         android:layout_weight="1"
-        android:id="@+id/login_relativeLayout">
+        android:id="@+id/login_relativeLayout"
+        android:layout_alignLeft="@+id/login_button"
+        android:layout_alignStart="@+id/login_button"
+        android:layout_alignRight="@+id/login_button"
+        android:layout_alignEnd="@+id/login_button">
 
         <CheckBox
             android:id="@+id/auto_save_password"
@@ -99,10 +87,10 @@
             android:background="@null"
             android:button="@null"
             android:checked="true"
-            android:drawableLeft="@drawable/selector_checkbox_bg"
+            android:drawableLeft="@drawable/checkbox_bg"
             android:drawablePadding="5dp"
             android:text="@string/auto_save_password"
-            android:textColor="@color/white"
+            android:textColor="@color/login_text_hint"
             android:textSize="16dp" />
 
         <Button
@@ -110,12 +98,10 @@
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:layout_alignParentRight="true"
-            android:gravity="left|center"
-            android:background="@drawable/selector_login_regist_bg"
-            android:paddingLeft="8dp"
-            android:paddingRight="18dp"
+            android:gravity="center"
+            android:background="@drawable/login_register_bg"
             android:text="@string/register_text"
-            android:textColor="@color/white"
+            android:textColor="@color/login_text_hint"
             android:textSize="14dp" />
 
     </RelativeLayout>
