--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,9 @@
     <color name="text_hint">#ff737373</color>
     <color name="page">#ffdcdcdc</color>
 
+    <color name="login_text_hint">#ffa89d87</color>
+    <color name="login_btn_text">#ffa79c88</color>
+
     <color name="red">#ffff0000</color>
     <color name="orange">#ffff570a</color>
     <color name="black">#ff000000</color>
