--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,14 +3,14 @@
     android:id="@+id/login_page"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@drawable/login_bg"
+    android:background="@drawable/main_bg"
     android:orientation="vertical" >
 
     <ImageView
         android:id="@+id/login_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="80dp"
         android:background="@drawable/logo"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
@@ -31,7 +31,7 @@
             android:paddingLeft="20dp"
             android:textColor="@color/black"
             android:textColorHint="@color/login_text_hint"
-            android:textSize="20dp" />
+            android:textSize="22dp"/>
 
         <EditText
             android:id="@+id/login_edit_password"
@@ -48,7 +48,7 @@
             android:paddingLeft="20dp"
             android:textColor="@color/black"
             android:textColorHint="@color/login_text_hint"
-            android:textSize="20dp"
+            android:textSize="22dp"
             android:layout_marginTop="10dp"
             android:layout_below="@+id/login_edit_account"
             android:layout_centerHorizontal="true" />
@@ -63,7 +63,7 @@
         android:gravity="center"
         android:text="@string/login"
         android:textColor="@color/login_btn_text"
-        android:textSize="20dp"
+        android:textSize="26dp"
         android:layout_below="@+id/login_edit_password"
         android:layout_centerHorizontal="true" />
 
